--- a/index.html
+++ b/index.html
@@ -6,27 +6,36 @@
     <title>Nova Health</title>
     <link rel="stylesheet" href="/style/style.css" />
     <link rel="stylesheet" href="/style/media.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <!-- hero -->
     <div class="max-w-1440 mx-auto">
+      <!-- hero -->
       <div class="relative">
         <div
           class="bg-absolute-img absolute w-full max-h-300 bottom-0 h-full"
         ></div>
         <div class="bg-blue-img bg-cover h-full bg-position-top">
           <div class="px-10 pt-12">
-            <img
-              class="max-w-200 w-full"
-              src="/assests/svg/logo.svg"
-              alt="logo"
-              width="200px"
-              height="40px"
-            />
+            <a href="/">
+              <img
+                class="max-w-200 w-full"
+                src="/assests/svg/logo.svg"
+                alt="logo"
+                width="200px"
+                height="40px"
+            /></a>
           </div>
           <div class="d-flex justify-between w-full items-center gap-24">
-            <div class="max-w-530 pl-12 px-4">
-              <h2 class="text-54 font-extrabold leading-120 m-0">
+            <div class="max-w-530 pl-100 px-4">
+              <h2 class="text-54 font-extrabold leading-120 m-0 mt-20">
                 Revolutionizing Healthcare with AI Automation
               </h2>
               <p class="text-xl font-medium leading-160 text-gray m-0 py-24">
@@ -54,7 +63,7 @@
         </div>
       </div>
       <!-- how it works -->
-      <div class="px-24">
+      <div class="px-24 mx-auto max-w-1390">
         <div
           class="bg-primary rounded-24 p-110-125 text-white text-center px-50"
         >
@@ -84,41 +93,186 @@
               <div class="w-full">
                 <img
                   class="max-w-100"
-                  src="/assests/svg/file-icon.svg"
+                  src="/assests/svg/alert-icon.svg"
                   alt="file"
                   width="100"
                   height="auto"
                 />
               </div>
               <h2 class="text-28 font-bold leading-160 m-0 mt-24 mb-10">
-                Verify Benefits
+                Authorization Alerts
               </h2>
               <p class="text-base leading-160 font-normal m-0">
-                Quickly verify benefits, including rates and authorization
-                prerequisites, to seamlessly onboard new patients.
+                Stay informed about upcoming authorizations due dates to prevent
+                care interruptions.
               </p>
             </div>
             <div class="w-full-2">
               <div class="w-full">
                 <img
                   class="max-w-100"
-                  src="/assests/svg/file-icon.svg"
+                  src="/assests/svg/form-icon.svg"
                   alt="file"
                   width="100"
                   height="auto"
                 />
               </div>
               <h2 class="text-28 font-bold leading-160 m-0 mt-24 mb-10">
-                Verify Benefits
+                Form Generation
               </h2>
               <p class="text-base leading-160 font-normal m-0">
-                Quickly verify benefits, including rates and authorization
-                prerequisites, to seamlessly onboard new patients.
+                Automatically fill out required forms and paperwork with our
+                Generative AI and LLM capabilities.
               </p>
             </div>
           </div>
         </div>
       </div>
+      <!-- trusted technology -->
+      <div
+        class="d-flex items-start justify-around gap-270 mt-150 mb-60 max-w-1220 mx-auto px-10"
+      >
+        <div class="max-w-340 text-start-res mx-auto-res">
+          <h2 class="text-54 font-extrabold leading-120 m-0">
+            Trusted Technology
+          </h2>
+          <p class="mt-24 text-xl font-medium leading-160 text-gray m-0">
+            At Nova Health, we prioritize security and reliability.
+          </p>
+        </div>
+        <div class="d-flex flex-col gap-24">
+          <div class="d-flex-res gap-24 items-start">
+            <div>
+              <img
+                class="max-w-70"
+                src="/assests/png/security-tick.png"
+                alt="security"
+                width="70px"
+                height="auto"
+              />
+            </div>
+            <div class="max-w-400">
+              <h3 class="text-28 font-extrabold leading-normal m-0">
+                HIPAA Compliant
+              </h3>
+              <p class="mt-30 text-gray text-lg font-medium leading-160 m-0">
+                We adhere strictly to HIPAA compliance, ensuring all patient and
+                provider data is sec ure and protected
+              </p>
+            </div>
+          </div>
+          <div class="d-flex-res gap-24 items-start">
+            <div>
+              <img
+                class="max-w-70"
+                src="/assests/png/security-with-lock.png"
+                alt="security-lock"
+                width="70px"
+                height="auto"
+              />
+            </div>
+            <div class="max-w-400">
+              <h3 class="text-28 font-extrabold leading-normal m-0">
+                Fully Secure
+              </h3>
+              <p class="mt-30 text-gray text-lg font-medium leading-160 m-0">
+                Our platform employs robust encryption methods, access controls,
+                and regular security audits to safeguard health information
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- unlock the power of AI -->
+      <div class="px-24">
+        <div
+          class="d-flex-2 gap-50 items-start bg-dark-blue mx-auto max-w-1390 rounded-24 p-155-70-100-90"
+        >
+          <div class="text-white w-full">
+            <h2 class="text-54 font-extrabold leading-120 m-0 max-w-450">
+              Unlock the Power of AI
+            </h2>
+            <p class="mt-24 m-0 text-xl font-medium leading-160 max-w-800">
+              Sign up for a free demo to get unlimited access to all app
+              features. Don’t miss out on:
+            </p>
+            <button
+              class="py-16-32 bg-primary border-primary rounded-12 text-white mt-32 font-bold text-lg tracking-normal cursor-pointer"
+            >
+              Join the revolution today!  🚀
+            </button>
+          </div>
+          <div class="d-flex gap-24-res flex-col">
+            <div class="d-flex-r gap-24 items-start">
+              <div>
+                <img
+                  class="max-w-70"
+                  src="/assests/svg/speed-icon.svg"
+                  alt="speed"
+                  width="70px"
+                  height="auto"
+                />
+              </div>
+              <div class="text-white">
+                <h2 class="text-28 font-extrabold leading-normal m-0 mb-10">
+                  Speed
+                </h2>
+                <p class="text-lg font-medium leading-160 text-gray-light m-0">
+                  Instant paperwork generation based on patient data, medical
+                  history, and current clinical guidelines
+                </p>
+              </div>
+            </div>
+            <div class="d-flex-r gap-24 items-start">
+              <div>
+                <img
+                  class="max-w-70"
+                  src="/assests/svg/quality-icon.svg"
+                  alt="quality"
+                  width="70px"
+                  height="auto"
+                />
+              </div>
+              <div class="text-white">
+                <h2 class="text-28 font-extrabold leading-normal m-0 mb-10">
+                  Quality
+                </h2>
+                <p class="text-lg font-medium leading-160 text-gray-light m-0">
+                  Our skilled in-house team of prior authorization specialists
+                  can help with managing complex claims
+                </p>
+              </div>
+            </div>
+            <div class="d-flex-r gap-24 items-start">
+              <div>
+                <img
+                  class="max-w-70"
+                  src="/assests/svg/efficiency-icon.svg"
+                  alt="speed"
+                  width="70px"
+                  height="auto"
+                />
+              </div>
+              <div class="text-white">
+                <h2 class="text-28 font-extrabold leading-normal m-0 mb-10">
+                  Efficiency
+                </h2>
+                <p class="text-lg font-medium leading-160 text-gray-light m-0">
+                  We efficiently resolve authorization denials, swiftly fixing
+                  administrative errors and elevating medical necessity issues
+                  for provider review or appeals
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- footer -->
+      <p
+        class="text-center py-24 m-0 font-normal leading-160 text-base text-light-blue inter"
+      >
+        All Rights Reserved ®Nova Health 2024
+      </p>
     </div>
   </body>
 </html>
