--- a/index.html
+++ b/index.html
@@ -196,11 +196,13 @@
               Sign up for a free demo to get unlimited access to all app
               features. Don’t miss out on:
             </p>
-            <button
-              class="py-16-32 bg-primary border-primary rounded-12 text-white mt-32 font-bold text-lg tracking-normal cursor-pointer"
+            <a
+              target="_blank"
+              href="/contact-us.html"
+              class="py-16-32 bg-primary d-flex w-fit border-primary rounded-12 text-white mt-32 font-bold text-lg tracking-normal no-underline"
             >
               Join the revolution today!  🚀
-            </button>
+            </a>
           </div>
           <div class="d-flex gap-24-res flex-col">
             <div class="d-flex-r gap-24 items-start">
